<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >

    <item android:id="@+id/action_takePicture"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_process"
        android:title="@string/action_process"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_setExample"
        android:title="@string/action_setExample"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_identify"
        android:title="@string/action_identify"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
